--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "league/csv": "^7.1",
-        "dompdf/dompdf" : "0.6.*"
+        "dompdf/dompdf" : "0.6.*",
+        "simple-crud/simple-crud": "^5.3"
     }
 }
